# colormydesktop

./: API.md  Makefile  Makefile.flatpak  NOTICE  README.md  SECURITY.md  color-my-desktop.desktop.in  color-my-desktop.flatpak  color-my-desktop.sh  color-my-gnome.sh  gnome-refresher.path  gnome-refresher.service  io.github.schwarzen.colormydesktop.desktop  io.github.schwarzen.colormydesktop.metainfo.xml  io.github.schwarzen.colormydesktop.yaml  lib_gui.py  localtest.yaml  main.py  meson.build  outline.sh  output_video.webm  plasma-refresher.path  plasma-refresher.service  post-install.sh
KDE/: Color-My-Desktop-Scheme.colors
KDE/Color-My-Desktop/: metadata.json
KDE/Color-My-Desktop-Plasma/: colors  metadata.json  plasmarc
KDE/Color-My-Desktop/contents/: defaults
KDE/Color-My-Desktop/contents/layouts/: org.kde.plasma.desktop-layout.js
colormydesktop/: advancedpref.py  dialogs.py  lib_gui.py  preview.py
palettes/: _Blue.scss  _Brown.scss  _Cloud city.scss  _Grey.scss  _Off White.scss  _Purple.scss  _White.scss
scss/: Color-My-Desktop.scss  _brown.scss  _lavender.scss  gnome-shell (Copy).scss  gnome-shell.scss  gtk4.scss  newtest.scss  youtube.scss  zen.scss
